<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.developmentpatterns.steve.protectingimplicitintents.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_photo"
                android:id="@+id/buttonCapturePhoto"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharing_content"
                android:id="@+id/buttonSharingContent"
                android:layout_below="@+id/buttonCapturePhoto"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_maps"
                android:id="@+id/buttonGoogleMaps"
                android:layout_below="@+id/buttonSharingContent"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button4"
                android:layout_below="@+id/buttonGoogleMaps"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compose_sms"
                android:id="@+id/buttonSms"
                android:layout_below="@+id/buttonGoogleMaps"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_play_store"
                android:id="@+id/buttonPlayStore"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_website"
                android:id="@+id/buttonLaunchWebsite"
                android:layout_below="@+id/buttonPlayStore"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:id="@+id/buttonSendEmail"
                android:layout_below="@+id/buttonLaunchWebsite"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_call"
                android:id="@+id/buttonPhoneCall"
                android:layout_below="@+id/buttonSendEmail"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivPreview"
                android:layout_below="@+id/buttonPhoneCall"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
